commit add cost tour

--- a/TravelApi/appsettings.json
+++ b/TravelApi/appsettings.json
@@ -20,5 +20,6 @@
     "Audience": "http://localhost:4200/",
     "Subject": "http://localhost:4200/"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "PercentHoliday": "15"
 }
