commit forgot password

--- a/TravelApi/appsettings.json
+++ b/TravelApi/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -21,5 +21,9 @@
     "Subject": "http://localhost:4200/"
   },
   "AllowedHosts": "*",
-  "PercentHoliday": "15"
+  "PercentHoliday": "15",
+  "OTPSubject": "Yêu cầu mã OTP",
+  "keySecurity": "efchuzpckkhapydd",
+  "emailSend":"professional8778781@gmail.com"
+
 }
