--- a/TravelApi/appsettings.json
+++ b/TravelApi/appsettings.json
@@ -11,8 +11,8 @@
     //"notifyTravelEntities": "Server=LONGNH-ITC\\LONGNH1;initial catalog=notifyTravel;user id=sa;password=123!@#Aa;MultipleActiveResultSets=True;App=EntityFramework&quot;"
     //"travelRoverEntities": "Server=KHANG;initial catalog=travelRover;Integrated Security=True",
     //"notifyTravelEntities": "Server=KHANG;initial catalog=notifyTravel;Integrated Security=True"
-    "travelRoverEntities": "Server=DESKTOP-877AFQH\\SANG;initial catalog=travelRover;Integrated Security=True",
-    "notifyTravelEntities": "Server=DESKTOP-877AFQH\\SANG;initial catalog=notifyTravel;Integrated Security=True"
+    "travelRoverEntities": "Server=.;initial catalog=travelRover;Integrated Security=True",
+    "notifyTravelEntities": "Server=.;initial catalog=notifyTravel;Integrated Security=True"
   },
   "Token": {
     "Key": "50df7907-d2fa-46de-8653-4a761d0e7585",
