--- a/TravelApi/appsettings.json
+++ b/TravelApi/appsettings.json
@@ -1,4 +1,5 @@
 ﻿{
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -24,6 +25,16 @@
   "PercentHoliday": "15",
   "OTPSubject": "Yêu cầu mã OTP",
   "keySecurity": "efchuzpckkhapydd",
-  "emailSend":"professional8778781@gmail.com"
+  "emailSend": "professional8778781@gmail.com",
+
+  "PaypalSettings": {
+    "ClientId": "AfZVi5QaHBc4DaY91JzjfkgTwlNq5qAiGj55ZFdAuLSHxrk-Kd4bTNpbdEWeRUSS2BAZzNM-ktNcB9RR",
+    "SecretKey": "EAzx3nEmaOZLe32zdmH1Hz0JgilVP1BNlWc7SftPXZ-8rR95dXPdgyhuAiv6YmaxG4JvT-ufKBA5L18z",
+
+    "UrlAPI": "https://api.sandbox.paypal.com",
+    "ReturnUrl": "https://youtube.com",
+    "CancelUrl": "https://google.com"
+
+  }
 
 }
