--- a/TravelApi/appsettings.json
+++ b/TravelApi/appsettings.json
@@ -12,14 +12,15 @@
     //"notifyTravelEntities": "Server=LONGNH-ITC\\LONGNH1;initial catalog=notifyTravel;user id=sa;password=123!@#Aa;MultipleActiveResultSets=True;App=EntityFramework&quot;"
     //"travelRoverEntities": "Server=KHANG;initial catalog=travelRover;Integrated Security=True",
     //"notifyTravelEntities": "Server=KHANG;initial catalog=notifyTravel;Integrated Security=True"
-    "travelRoverEntities": "Server=MSI\\SQLEXPRESS;initial catalog=travelRover;Integrated Security=True",
-    "notifyTravelEntities": "Server=MSI\\SQLEXPRESS;initial catalog=notifyTravel;Integrated Security=True"
+    "travelRoverEntities": "Server=.;initial catalog=travelRover;Integrated Security=True",
+    "notifyTravelEntities": "Server.;initial catalog=notifyTravel;Integrated Security=True"
   },
   "Token": {
     "Key": "50df7907-d2fa-46de-8653-4a761d0e7585",
     "Issuer": "http://localhost:4200/",
     "Audience": "http://localhost:4200/",
-    "Subject": "http://localhost:4200/"
+    "Subject": "http://localhost:4200/",
+    "TimeExpired": "60"
   },
   "AllowedHosts": "*",
   "PercentHoliday": "15",
