commit test log file

--- a/TravelApi/TravelApi.csproj
+++ b/TravelApi/TravelApi.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Folder Include="Cre\" />
     <Folder Include="token.json\" />
+    <Folder Include="wwwroot\Logs\" />
   </ItemGroup>
 
 </Project>
