--- a/Travel.Shared/Travel.Shared.csproj
+++ b/Travel.Shared/Travel.Shared.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+	  <PackageReference Include="CloudinaryDotNet" Version="1.0.20" />
+
   </ItemGroup>
 
   <ItemGroup>
