--- a/TravelApi/appsettings.json
+++ b/TravelApi/appsettings.json
@@ -12,8 +12,8 @@
     //"notifyTravelEntities": "Server=LONGNH-ITC\\LONGNH1;initial catalog=notifyTravel;user id=sa;password=123!@#Aa;MultipleActiveResultSets=True;App=EntityFramework&quot;"
     //"travelRoverEntities": "Server=KHANG;initial catalog=travelRover;Integrated Security=True",
     //"notifyTravelEntities": "Server=KHANG;initial catalog=notifyTravel;Integrated Security=True"
-    "travelRoverEntities": "Server=.;initial catalog=travelRover;Integrated Security=True",
-    "notifyTravelEntities": "Server.;initial catalog=notifyTravel;Integrated Security=True"
+    "travelRoverEntities": "Server=MSI\\SQLEXPRESS;initial catalog=travelRover;Integrated Security=True",
+    "notifyTravelEntities": "Server=MSI\\SQLEXPRESS;initial catalog=notifyTravel;Integrated Security=True"
   },
   "Token": {
     "Key": "50df7907-d2fa-46de-8653-4a761d0e7585",
@@ -27,15 +27,26 @@
   "OTPSubject": "Yêu cầu mã OTP",
   "keySecurity": "efchuzpckkhapydd",
   "emailSend": "professional8778781@gmail.com",
-
+  "UrlClientCustomer": "http://localhost:4200/",
   "PaypalSettings": {
     "ClientId": "AfZVi5QaHBc4DaY91JzjfkgTwlNq5qAiGj55ZFdAuLSHxrk-Kd4bTNpbdEWeRUSS2BAZzNM-ktNcB9RR",
     "SecretKey": "EAzx3nEmaOZLe32zdmH1Hz0JgilVP1BNlWc7SftPXZ-8rR95dXPdgyhuAiv6YmaxG4JvT-ufKBA5L18z",
 
     "UrlAPI": "https://api.sandbox.paypal.com",
-    "ReturnUrl": "https://youtube.com",
-    "CancelUrl": "https://google.com"
+    "ReturnUrl": "https://localhost:44394/",
+    "CancelUrl": "https://localhost:4200/Paypal/CheckoutFailed"
+  },
 
-  }
+  "VnpaySetting": {
+    "UrlSuccessPayment": "http://localhost:4200/",
+    "TmnCode": "TQ0WVESN",
+    "HashSecret": "FYKHUOFODYLCAOEENLGYJIZGYUMOJGXJ",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Version": "2.1.0",
+    "Locale": "vn"
+  },
+  "TimeZoneId": "SE Asia Standard Time" // If do not us Windown OS change it to: Asia/Bangkok
 
 }
