--- a/TravelApi/appsettings.json
+++ b/TravelApi/appsettings.json
@@ -13,7 +13,7 @@
     //"travelRoverEntities": "Server=KHANG;initial catalog=travelRover;Integrated Security=True",
     //"notifyTravelEntities": "Server=KHANG;initial catalog=notifyTravel;Integrated Security=True"
     "travelRoverEntities": "Server=.;initial catalog=travelRover;Integrated Security=True",
-    "notifyTravelEntities": "Server.;initial catalog=notifyTravel;Integrated Security=True"
+    "notifyTravelEntities": "Server=.;initial catalog=notifyTravel;Integrated Security=True"
   },
   "Token": {
     "Key": "50df7907-d2fa-46de-8653-4a761d0e7585",
