hòa làm chơi chơi

--- a/TravelApi/appsettings.json
+++ b/TravelApi/appsettings.json
@@ -47,6 +47,6 @@
     "Version": "2.1.0",
     "Locale": "vn"
   },
-  "TimeZoneId": "SE Asia Standard Time" // If do not us Windown OS change it to: Asia/Bangkok
-
+  "TimeZoneId": "SE Asia Standard Time", // If do not us Windown OS change it to: Asia/Bangkok
+  "Bill": "http://localhost:4200/"
 }
