--- a/TravelApi/appsettings.json
+++ b/TravelApi/appsettings.json
@@ -48,5 +48,12 @@
     "Locale": "vn"
   },
   "TimeZoneId": "SE Asia Standard Time", // If do not us Windown OS change it to: Asia/Bangkok
-  "Bill": "http://localhost:4200/"
+  "Bill": "http://localhost:4200/",
+  "AppIdWeather": "439d4b804bc8187953eb36d2a8c26a02",
+  "UrlApiWeather": "https://openweathermap.org/data/2.5/onecall?lat=10.8333&lon=106.6667&units=metric&appid=",
+  "UrlLocationMap": {
+    "AccessKey": "308bc9d795409a7b181e2cc40a5d0d64",
+    "Url": "http://api.positionstack.com/v1/forward"
+
+  }
 }
