--- a/TravelApi/appsettings.json
+++ b/TravelApi/appsettings.json
@@ -12,8 +12,8 @@
     //"notifyTravelEntities": "Server=LONGNH-ITC\\LONGNH1;initial catalog=notifyTravel;user id=sa;password=123!@#Aa;MultipleActiveResultSets=True;App=EntityFramework&quot;"
     //"travelRoverEntities": "Server=KHANG;initial catalog=travelRover;Integrated Security=True",
     //"notifyTravelEntities": "Server=KHANG;initial catalog=notifyTravel;Integrated Security=True"
-    "travelRoverEntities": "Server=MSI\\SQLEXPRESS;initial catalog=travelRover;Integrated Security=True",
-    "notifyTravelEntities": "Server=MSI\\SQLEXPRESS;initial catalog=notifyTravel;Integrated Security=True"
+    "travelRoverEntities": "Server=.;initial catalog=travelRover;Integrated Security=True",
+    "notifyTravelEntities": "Server=.;initial catalog=notifyTravel;Integrated Security=True"
   },
   "Token": {
     "Key": "50df7907-d2fa-46de-8653-4a761d0e7585",
@@ -34,11 +34,12 @@
 
     "UrlAPI": "https://api.sandbox.paypal.com",
     "ReturnUrl": "https://localhost:44394/",
-    "CancelUrl": "https://localhost:4200/Paypal/CheckoutFailed"
+    //"CancelUrl": "https://localhost:4200/Paypal/CheckoutFailed"
+    "CancelUrl": "https://localhost:4200/"
   },
 
   "VnpaySetting": {
-    "UrlSuccessPayment": "http://localhost:4200/",
+    "UrlSuccessPayment": "https://localhost:44394/",
     "TmnCode": "TQ0WVESN",
     "HashSecret": "FYKHUOFODYLCAOEENLGYJIZGYUMOJGXJ",
     "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
