commit customer fix

--- a/TravelApi/appsettings.json
+++ b/TravelApi/appsettings.json
@@ -22,6 +22,7 @@
     "Subject": "http://localhost:4200/",
     "TimeExpired": "600"
   },
+  "UrlService": "https://localhost:5001/",
   "AllowedHosts": "*",
   "PercentHoliday": "15",
   "OTPSubject": "Yêu cầu mã OTP",
