--- a/TravelApi/appsettings.json
+++ b/TravelApi/appsettings.json
@@ -22,7 +22,8 @@
     "Subject": "http://localhost:4200/",
     "TimeExpired": "600"
   },
-  "UrlService": "https://roverbookingservice.azurewebsites.net/",
+  //"UrlService": "https://roverbookingservice.azurewebsites.net/",
+  "UrlService": "https://localhost:5001/",
   "AllowedHosts": "*",
   "PercentHoliday": "15",
   "OTPSubject": "Yêu cầu mã OTP",
