commit xóa ngay lập tức và chỉnh signalr

--- a/TravelApi/appsettings.json
+++ b/TravelApi/appsettings.json
@@ -22,8 +22,7 @@
     "Subject": "http://localhost:4200/",
     "TimeExpired": "600"
   },
-  //"UrlService": "https://roverbookingservice.azurewebsites.net/",
-  "UrlService": "https://localhost:5001/",
+  "UrlService": "https://roverbookingservice.azurewebsites.net/",
   "AllowedHosts": "*",
   "PercentHoliday": "15",
   "OTPSubject": "Yêu cầu mã OTP",
