--- a/TravelApi/appsettings.json
+++ b/TravelApi/appsettings.json
@@ -16,11 +16,11 @@
     "notifyTravelEntities": "Server=tcp:travelrover.database.windows.net,1433;Initial Catalog=notifyTravel;Persist Security Info=False;User ID=travelrover;Password=123!@#Aa;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Token": {
-    "Key": "50df7907-d2fa-46de-8653-4a761d0e7585",
-    "Issuer": "https://kingtravelrover.web.app/",
-    "Audience": "https://kingtravelrover.web.app/",
-    "Subject": "https://kingtravelrover.web.app/",
-    "TimeExpired": "30"
+    "Key": "50df7907-d2fa-46de-8653-12341d0e7585",
+    "Issuer": "https://adtravelrover.web.app/",
+    "Audience": "https://adtravelrover.web.app/",
+    "Subject": "https://adtravelrover.web.app/",
+    "TimeExpired": "60"
   },
   "TokenEmployee": {
     "Key": "50df7907-d2fa-46de-8653-12341d0e7585",
@@ -59,10 +59,9 @@
   "TimeZoneId": "SE Asia Standard Time", // If do not us Windown OS change it to: Asia/Bangkok
   "Bill": "https://kingtravelrover.web.app/",
   "AppIdWeather": "439d4b804bc8187953eb36d2a8c26a02",
-  "UrlApiWeather": "https://openweathermap.org/data/2.5/onecall?lat=10.8333&lon=106.6667&units=metric&appid=",
+  "UrlApiWeather": "https://openweathermap.org/data/2.5/onecall",
   "UrlLocationMap": {
     "AccessKey": "308bc9d795409a7b181e2cc40a5d0d64",
     "Url": "http://api.positionstack.com/v1/forward"
-
   }
 }
